--- a/assign3.html
+++ b/assign3.html
@@ -14,8 +14,7 @@
 
     <p>Visit <a href="https://www.thefuturalabs.com" target="_blank">Futura Labs</a> for more information.</p>
 
-    <!-- Image hyperlinking to an example HTML page -->
-    <img src="https://www.wallpapertip.com/wmimgs/91-913579_ford-mustang-wallpapers-mustang-backgrounds-black-mustang-gt.jpg" alt="not image" width="200" height="300">
+    <img src="https://www.wallpapertip.com/wmimgs/91-913579_ford-mustang-wallpapers-mustang-backgrounds-black-mustang-gt.jpg" alt="not image found" width="200" height="300">
     </a>
     
 </body>
