--- a/html_assign.html
+++ b/html_assign.html
@@ -27,7 +27,7 @@
 
     <h2>Algebraic Equations:</h2>
     <p>(a – b)<sup>2</sup> = a<sup>2</sup> – 2ab + b<sup>2</sup></p>
-    <p>(a + b)<sup>3</sup> = a<sup>3</sup> + 3a<sup>2</sup>b + 3ab<sup>2</sup> + b<sup>3</sup></p>
+    <p>(a + b)<sup>3</sup> = a<sup>3</sup> + 3a<sup></sup>b + 3ab<sup>2</sup> + b<sup>3</sup></p>
     
 
 
